--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -7,8 +7,16 @@
 
     <h2 class="mt-4 mb-4 text-center">List of properties</h2>
 
+    {# <div class="count">
+        There is {{ pagination.getTotalItemCount }} properties in the database
+    </div> #}
+
     <div class="row">
         {% include 'property/_card.html.twig' %}
+    </div>
+
+    <div class="navigation">
+        {{ knp_pagination_render(properties) }}
     </div>
 
 {% endblock %}
