--- a/templates/frontend/layouts/navbar.html.twig
+++ b/templates/frontend/layouts/navbar.html.twig
@@ -6,9 +6,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link active" href="{{ path('app_property_list') }}">Properties<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{ path('app_category_list') }}">Categories</a>
             </div>
         </div>
     </div>
