--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -6,9 +6,9 @@
 
     <h2 class="mt-4 mb-4 text-center">List of properties</h2>
 
-    {# {{ form_start(form) }}
+    {{ form_start(form) }}
         {{ form_row(form.q) }}
-    {{ form_end(form) }} #}
+    {{ form_end(form) }}
 
     {# <div class="count">
         There is {{ pagination.getTotalItemCount }} properties in the database
