--- a/templates/frontend/layouts/navbar.html.twig
+++ b/templates/frontend/layouts/navbar.html.twig
@@ -6,8 +6,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-            <a class="nav-link active" href="{{ path('app_property_list') }}">Properties<span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="{{ path('app_category_list') }}">Categories</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ path('app_property_list') }}">Properties</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_category_list') }}">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_owner_index') }}">Proprietaires</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_admin_index') }}">Admin</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{{ path('app_login') }}" class="nav-link">Sign in</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('app_register') }}" class="nav-link">Sign up</a>
+                </li>
+            </ul>
             </div>
         </div>
     </div>
