--- a/templates/owner/index.html.twig
+++ b/templates/owner/index.html.twig
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_owner_new') }}">Create new</a>
+    <a href="{{ path('app_owner_new') }}" class="btn btn-primary">Create new owner</a>
 {% endblock %}
