--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -7,7 +7,8 @@
     <h2 class="mt-4 mb-4 text-center">List of properties</h2>
 
     {{ form_start(form) }}
-        {{ form_row(form.q) }}
+        
+    <button class="btn btn-primary" type="submit">Rechercher</button>
     {{ form_end(form) }}
 
     {# <div class="count">
