--- a/templates/backend/admin/index.html.twig
+++ b/templates/backend/admin/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'frontend/base.html.twig' %}
+{% extends 'backend/admin/base.html.twig' %}
 
 {% block body %}
 
@@ -25,7 +25,12 @@
 			  <td>{{ property.quarter }}</td>
 			  <td>
 			  	<a href="{{ path('app_property_edit', {id: property.id}) }}" class="btn btn-primary">Editer</a>
-			  	<a href="" class="btn btn-danger">Supprimer</a>
+
+			  	<form method="post" action="{{ path('app_property_delete', {id: property.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');" style="display: inline-block;">
+					<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ property.id) }}">
+					<button class="btn btn-danger">Supprimer</button>
+				</form>
+
 			  </td>
 			</tr>
 		{% endfor %}
