--- a/templates/backend/admin/layouts/header.html.twig
+++ b/templates/backend/admin/layouts/header.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="{{ path('app_home_index') }}">HAYA</a>
+        <a class="navbar-brand" href="{{ path('app_home_index') }}">Dashboard</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,17 +18,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_admin_index') }}">Admin</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="{{ path('app_login') }}" class="nav-link">Sign in</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_register') }}" class="nav-link">Sign up</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_search_results') }}" class="nav-link">Search</a>
                 </li>
                 <li class="nav-item">
                     <a href="{{ path('user_index') }}" class="nav-link">User</a>
