--- a/templates/search/_properties.html.twig
+++ b/templates/search/_properties.html.twig
@@ -1,18 +1,23 @@
 {% for property in properties %}
     <div class="col-md-4 mb-4">
-        {# {% include 'property/_card.html.twig' %} #}
-
-        <div class="card" style="width: 22rem;">
+        <div class="card" style="width: 18rem;">
         <img src="{{ vich_uploader_asset(property) | imagine_filter('my_card_thumb') }}" alt="{{ property.title }}">
           <div class="card-body">
             <h5 class="card-title">
-              <a href="{{ path('app_property_show', {id: property.id}) }}">{{ property.title }}</a></h5>
+              <a href="{{ path('app_property_show', {id: property.id}) }}">{{ property.title }}</a>
+            </h5>
             <strong>Catégorie:</strong>
             {% for category in property.categories %}
                <span class="card-text text-danger"> {{ category.name }} </span>
             {% endfor %}
 
-              <div> <span style="font-weight: bold;">Lieu: </span> {{property.quarter.name | upper}}</div>
+              <div> <span style="font-weight: bold;">
+                Lieu: </span> {{property.quarter.name | upper}}
+              </div>
+
+              <div class="text-warning" style="font-size: 22px;">
+                {{ property.price }}
+              </div>
  
           </div>
         </div>
